styles/main.css
body {
    margin: 0;
    background-color: #acdbec;
}

/* TITLE SECTION */

#title-section {
    height: 85vh;
    margin-bottom: 0;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    /* image url in media query section */
}

.title {
    text-align: center;    
}

/* HEADER / 'MATCH' SECTION */

header {
    background-color:  #333;
    color: #eee;
    line-height: 1.4;    
    text-align: center;
    width: 100%;
    height: 185px;
}

.header-sticky {
    position: fixed;
    z-index: 10;
    top: 0;
}

#match {
    margin-left: 15px;
    margin-right: 15px;
}

#headline {
    margin-top: 10vh;
    margin-bottom: 0;
    font-size: 48px;
    display: none;
}

#tagline {
    margin-top: 0;
    display: none;
}

.circle {
    width: 120px;
    height: 120px;
    margin: 10px 10px 40px 10px;
    border-radius: 50%;
    background-color: #eee;
    color: blue;
    display: inline-block;
}

.caption {
    font-size: 24px;
}

img.emma, img.dave {
    margin: 10px 10px 0 10px;
}

.action-btn {
    padding: 12px;
    display: none;
    background-color: #333;
    border: 1px solid #eee;
    color: #eee;
    font-size: 15px;
}

a, .action-btn {
    width: 275px;
    margin: 15px auto;
    border-radius: 10px;    
}

a {
    display: block;
    width: 275px;
}

.action-btn:hover, a:hover {
    background-color: #778;
    text-decoration: none;
    color: #eee;
}

/* MAIN TEXT SECTION */

.quote {
    position:relative;
    padding:15px;
    margin:1em 3em 3em;
    color:#fff;
    -webkit-border-radius:10px;
    -moz-border-radius:10px;
    border-radius:10px;
}

.left {
    background:#075698;
}

.right {
    background: grey;
}

.quote:after {
    content:"";
    position:absolute;
    bottom:-20px;
    border-style:solid;
    display:block;
    width:0;    
}

.left:after {

    left:50px;
    border-width:20px 20px 0px 0px;
    border-color:#075698 transparent;
}

.right:after {

    right:50px;
    border-width:20px 0px 0px 20px;
    border-color:grey transparent;
}

/* SPACER SECTION */

#btm-spacer {
    height: 120vh;
}

.arrow-down {
    margin: 25px auto;
    width: 0; 
    height: 0; 
    border-left: 20px solid transparent;
    border-right: 20px solid transparent; 
    border-top: 20px solid #075698;
}

/*==========  Media Queries  ==========*/

/* Extra Small Devices, Phones */  
@media only screen and (min-width : 320px) {

    #title-section {
        background-image: url(../img/nash_skyline_small.jpg);
    }

    .title {
        margin-top: 20vh;    
    }

    .left {
        margin-right: 15%;
    }    

    .right {
        margin-left: 15%;
    }    
}

/* revert bootstrap margins for text bubbles on smaller screens */
@media only screen and (max-width : 767px) {
   .left {
        margin-left: 12px;
    }

    .right {
        margin-right: 12px;
    } 
}

/* Small Devices, Tablets / Medium Devices, Desktops */
@media only screen and (min-width : 768px) {

    #title-section {
        background-image: url(../img/nash_skyline_med.jpg);
    }

    .title {
        margin-top: 25vh;    
    }

    .left {
        margin-right: 20%;
    }    

    .right {
        margin-left: 20%;
    }

}


/*@media only screen and (min-width : 992px) {

}*/

/* Large Devices, Wide Screens */
@media only screen and (min-width : 1200px) {

    #title-section {
        background-image: url(../img/nash_skyline_large.jpg);
    }

    .title {
        margin-top: 30vh;    
    }
/*    .left {
        margin-right: 25%;
    }    

    .right {
        margin-left: 25%;
    } */   
}

/* iPhone Retina Display*/
@media screen and (-webkit-min-device-pixel-ratio: 2), screen and (max–moz-device-pixel-ratio: 2) {
    #title-section {
        background-image: url(../img/nash_skyline_large.jpg);
    }    
}

